--- a/src/BigQueryProvider/DevExpress.DataAccess.BigQuery.nuspec
+++ b/src/BigQueryProvider/DevExpress.DataAccess.BigQuery.nuspec
@@ -19,8 +19,8 @@
     </dependencies>
   </metadata>
   <files>
-    <file src="bin\$configuration$\DevExpress.DataAccess.BigQuery.dll" target="lib\netstandard2.0\" />
-    <file src="bin\$configuration$\DevExpress.DataAccess.BigQuery.pdb" target="lib\netstandard2.0\" />
-    <file src="bin\$configuration$\DevExpress.DataAccess.BigQuery.xml" target="lib\netstandard2.0\" />
+    <file src="bin\$configuration$\netstandard2.0\DevExpress.DataAccess.BigQuery.dll" target="lib\netstandard2.0\" />
+    <file src="bin\$configuration$\netstandard2.0\DevExpress.DataAccess.BigQuery.pdb" target="lib\netstandard2.0\" />
+    <file src="bin\$configuration$\netstandard2.0\DevExpress.DataAccess.BigQuery.xml" target="lib\netstandard2.0\" />
   </files>
 </package>
